# langx

./: .env.sample  .gitignore  LICENSE  Makefile  README.md  compose.override.yml  compose.yml  langx.code-workspace  requirements.txt
.devcontainer/: devcontainer.json
backend/: Makefile  pyproject.toml  webapi.py
backend/app/business/campfire/: downloader.py  downloader_0.01.py  graphdb.py  project.py  rdb.py  to_rdb.py
backend/app/dify/: 1.json
backend/app/exllamav2_chat/: model.py
backend/app/general/executable/: eval.py  train.py
backend/app/general/models/: model.py  positional_encoding.py  trainer.py  trainer_builder.py
backend/app/langchain/component/: agent_bot.py
backend/app/langchain/component/agent/: agent_builder.py  agent_executor.py  initialize.py  prompt.py
backend/app/langchain/executable/: demo.py  ex_gradio.py
backend/app/llama2cpp/component/: llama2cpp.py  outputparser.py
backend/app/llama_index/: loader.py  make_index.py
backend/app/llm_toolmaker/: bbh.py  eval.py  prompt.py  tool_maker.py  tool_user.py
backend/app/lowcode_llm/: LICENSE.md  executingLLM.py  index.html  index_langchain.html  lowCodeLLM.py  openAIWrapper.py  planningLLM.py  webapp.py
backend/app/lowcode_llm/test/: test_execute.py  test_extend_workflow.py  test_get_workflow.py
backend/app/morph/: classify.py
backend/app/scrapy/: scrapy.cfg
backend/app/scrapy/newspy/: items.py  middlewares.py  pipelines.py  settings.py
backend/app/scrapy/newspy/spiders/: news.py
backend/app/semantic_kernel/component/: planner.py  runner.py  semantic_bot.py  semantic_memory.py
backend/app/semantic_kernel/component/skills/answer/: native_function.py
backend/app/semantic_kernel/component/skills/interpreter/: codeinterpreter_python.py
backend/app/semantic_kernel/component/skills/math/: native_function.py
backend/app/semantic_kernel/component/skills/search/: search_local.py  search_web.py
backend/app/semantic_kernel/executable/: auto_runner.py  demo.py  demo_runner.py  demo_runner_st.py
backend/app/simple/executable/: train.py
backend/app/simple/models/: model.py  trainer.py
backend/app/streamsync/app/: main.py  ui.json
backend/conf/: app.yml  logging.ini
backend/conf/sql/: create_view_project_details_latest.sql  create_view_projects_category_transition.sql  create_view_projects_view.sql
backend/llm_tools/: word_sorting.json
backend/notebook/: azure_document_inteligence.ipynb  campfire_import.ipynb  campfire_rdb.ipynb  codeinterpreter.ipynb  dify.ipynb  dtw.ipynb  e5_with_lime.ipynb  elyza_deepspeed.ipynb  elyza_exllamav2.ipynb  elyza_gguf.ipynb  elyza_gguf_fine-tuning.ipynb  elyza_gguf_rag.ipynb  elyza_jp_8b.ipynb  elyza_making_exllamav2.ipynb  elyza_making_gguf.ipynb  elyza_making_gguf_codellama.ipynb  embeddings_e5.ipynb  evidently-ai-testsuite.ipynb  firecrawl.ipynb  gemma2.ipynb  gpt-4v.ipynb  guidance.ipynb  heron.ipynb  jgbcm_interest_rate.ipynb  lang_graph.ipynb  langchain_schema.ipynb  lda.ipynb  lda.py  llama2_cpp_gguf.ipynb  llama3.1.ipynb  matplotlib_jp.ipynb  mistral_gguf.ipynb  mixtral_gguf.ipynb  neo4j.ipynb  newsdb.ipynb  nlp-graph-matrix.ipynb  notebook_faiss.ipynb  opencalm.ipynb  pcorr.ipynb  phi-2.ipynb  (+11 more)
conf/: neo4j.conf
docker/: Dockerfile.cpu  Dockerfile.gpu  Dockerfile.gpu.experiment  Dockerfile.neo4j  compose.cpu.yml  compose.gpu.yml  compose.override.db.yml
rc/: .bashrc
